--- a/site/coral.ru/css/home-countdown.less
+++ b/site/coral.ru/css/home-countdown.less
@@ -145,7 +145,7 @@
 			}
 			h3 {
 				font-size: 24/11em;
-				font-weight: 300;
+				font-weight: 700;
 				margin: 0;
 				color: inherit;
 				@media screen and (max-width: 1199px) {
@@ -159,9 +159,11 @@
 				}
 			}
 			p {
+				font-size: 24/11em;
 				margin-top: .5em;
 				@media screen and (max-width: @mobile-breakpoint) {
 					margin-top: 1.5em;
+					font-size: 1.7em;
 				}
 			}
 		}
