--- a/site/coral.ru/css/home-countdown.css
+++ b/site/coral.ru/css/home-countdown.css
@@ -115,7 +115,7 @@
 }
 #home-countdown .inhalt .info h3 {
   font-size: 2.18181818em;
-  font-weight: 300;
+  font-weight: 700;
   margin: 0;
   color: inherit;
 }
@@ -133,11 +133,13 @@
   font-weight: 700;
 }
 #home-countdown .inhalt .info p {
+  font-size: 2.18181818em;
   margin-top: 0.5em;
 }
 @media screen and (max-width: 768px) {
   #home-countdown .inhalt .info p {
     margin-top: 1.5em;
+    font-size: 1.7em;
   }
 }
 #home-countdown .inhalt .countdown-widget {
